--- a/views/home.ejs
+++ b/views/home.ejs
@@ -90,7 +90,7 @@
                 <div class="services-list">
                     <div>
                         <i class="fa-solid fa-earth-americas"></i>
-                        <h2>Maps, maps and more maps</h2>
+                        <h2>Cartography and data viz</h2>
                         <p>Cartographic design and production for all your needs.
                             Scientific inputs with aesthetic results <br><br>
                         <p class="cita">"La cartografía es la más artística de las ciencias y la más científica
@@ -102,15 +102,17 @@
 
                     <a href="#" >learn more</a>
             </div> -->
-                    <div>
-                        <i class="fa-solid fa-magnifying-glass-chart"></i>
-                        <h2>Data Visualization</h2>
-                    </div>
+                    <a href="/data-portfolio">
+                        <div>
+                            <i class="fa-solid fa-magnifying-glass-chart"></i>
+                            <h2>Academic production</h2>
+                            <p class="text">Check my projects, papers, thesis and more. <br><br>
+                        </div>
+                    </a>
                     <div>
                         <i class="fa-solid fa-images"></i>
                         <h2>Photography</h2>
-                        <p>From boxing championships to catalan Correfoc or mexican Son Jarocho. Just my life through a
-                            lens. <br><br>
+                        <p class="cita">"From boxing championships to catalan Correfoc or mexican Son Jarocho. Just my life through a lens". <br><br>
                     </div>
                 </div>
             </div>
@@ -123,25 +125,25 @@
                 <h1 class="sub-title">Portfolio</h1>
                 <div class="work-list">
                     <div class="work">
+                        <img src="img\roboto.png" alt="Aquí va una imagen">
+                        <div class="layer">
+                            <h3>Data</h3>
+                            <a href="/data-portfolio"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <!-- <div class="work">
                         <img src="img\laguna.png" alt="Aquí va una imagen">
                         <div class="layer">
                             <h3>Geography</h3>
                             <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="work">
                         <img src="img\michi.png" alt="Aquí va una imagen">
                         <div class="layer">
                             <h3>Code</h3>
                             <a href="https://github.com/ekbalam11/"><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="work">
-                        <img src="img\roboto.png" alt="Aquí va una imagen">
-                        <div class="layer">
-                            <h3>Data</h3>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
