--- a/views/data-portfolio.ejs
+++ b/views/data-portfolio.ejs
@@ -56,6 +56,7 @@
                     </a>
                 </div>
             </div>
+            <div class="faq">
             <button class="accordion">
                 <h3>Paper: Forest communities and Socioecological Systems </h3>
                 <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
