--- a/views/data-portfolio.ejs
+++ b/views/data-portfolio.ejs
@@ -2,8 +2,17 @@
 <html lang="en">
 
 <head>
-    <title>🐆-Balam Castro</title>
-    <%- include('./partials/head.ejs') %>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1-0">
+    <title> 🐆 Balam Castro </title>
+    <link rel="stylesheet" href="\style.css">
+    <link rel="stylesheet" href="\portfolio-style.css">
+    <!-- <link rel="stylesheet" href="\reset-style.css"> -->
+    <script src="https://kit.fontawesome.com/dad9f3d6dd.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="design-style.css">
 </head>
 
 <body>
@@ -29,7 +38,7 @@
     <section class="section">
         <!-- ----------------------scientific papers colabs -->
         <div class="wrapper">
-            <h1>Designs Gallery</h1>
+            <h1>Design Gallery</h1>
             <div class="faq">
                 <button class="accordion">
                     <h3>Project: Aquatic birds and ARG resistance </h3>
