--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,7 +52,8 @@
                                     Graphic design</li>
                                 <li><span>Coding</span><br>
                                     Full-stack web development <br>
-                                    <a href="https://github.com/ekbalam11">Check out my github profile for more
+                                    <a href="https://github.com/ekbalam11" target="_blank">Check out my github profile
+                                        for more
                                         info!</a>
                             </ul>
                         </div>
@@ -84,39 +85,38 @@
             </div>
         </div>
         <!--------------------services-------------------->
-        <div class="section" id="services">
+        <!-- <div class="section" id="services">
             <div class="container">
                 <h1 class="sub-title">My Services</h1>
                 <div class="services-list">
                     <div>
-                        <i class="fa-solid fa-earth-americas"></i>
-                        <h2>Cartography and data viz</h2>
-                        <p>Cartographic design and production for all your needs.
-                            Scientific inputs with aesthetic results <br><br>
-                        <p class="cita">"La cartografía es la más artística de las ciencias y la más científica
-                            de las artes"
+                        <a href="/data-portfolio">
+                            <i class="fa-solid fa-earth-americas"></i>
+                            <h2>Cartography and data viz</h2>
+                            <p style="color: whitesmoke;">Cartographic design and production for all your needs.
+                                Scientific inputs with aesthetic results</p> <br><br>
+                            <p class="cita">"La cartografía es la más artística de las ciencias y la más científica de
+                                las artes" </p>
+                        </a>
                     </div>
-                    <!-- <div>
-                <i class="fa-solid fa-code"></i>
-                <h2>Web Development</h2>
-
-                    <a href="#" >learn more</a>
-            </div> -->
-                    <a href="/data-portfolio">
-                        <div>
+                    <div>
+                        <a href="#">
                             <i class="fa-solid fa-magnifying-glass-chart"></i>
                             <h2>Academic production</h2>
-                            <p class="text">Check my projects, papers, thesis and more. <br><br>
-                        </div>
-                    </a>
+                            <p>Check my projects, papers, thesis and more. <br><br>
+                        </a>
+                    </div>
                     <div>
+                        <a href="/portfolio"></a>
                         <i class="fa-solid fa-images"></i>
                         <h2>Photography</h2>
-                        <p class="cita">"From boxing championships to catalan Correfoc or mexican Son Jarocho. Just my life through a lens". <br><br>
+                        <p class="cita">"From boxing championships to catalan Correfoc or mexican Son Jarocho. Just my
+                            life through a lens". <br><br>
+                            </a>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!---------------------------portfolio---------------->
 
@@ -176,7 +176,8 @@
                         <p><i class="fa-regular fa-comments"></i>ekbalam11@gmail.com</p>
                         <p><i class="fa-solid fa-mobile-screen"></i>(+34)666140628</p>
                         <div class="social-CV">
-                            <a href="/download-CV" download="../public/resources/BalamCastroCV2024.pdf"><button type="submit" class="btn">Download CV</button></a>
+                            <a href="/download-CV" download="../public/resources/BalamCastroCV2024.pdf"><button
+                                    type="submit" class="btn">Download CV</button></a>
                             <div class="social-icons">
                                 <a href="https://github.com/ekbalam11/"><i class="fa-brands fa-github"></i></a>
                                 <a href="https://www.linkedin.com/in/balamcastro/"><i
@@ -192,8 +193,10 @@
                     <div class="contact-form">
                         <form action="/new-message" method="POST">
                             <input type="text" name="name" id="name" placeholder="Your Name" required>
-                            <input type="email" id="email" name="email" placeholder="Your email" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required>
-                            <textarea name="message" id="message" rows="6" placeholder="Your Message" required></textarea>
+                            <input type="email" id="email" name="email" placeholder="Your email"
+                                pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required>
+                            <textarea name="message" id="message" rows="6" placeholder="Your Message"
+                                required></textarea>
                             <button type="submit" class="btn">Send your message</button>
                         </form>
                     </div>
