--- a/views/data-portfolio.ejs
+++ b/views/data-portfolio.ejs
@@ -11,7 +11,9 @@
     <script src="https://kit.fontawesome.com/dad9f3d6dd.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="design-style.css">
 </head>
 
@@ -39,45 +41,108 @@
         <!-- ----------------------scientific papers colabs -->
         <div class="wrapper">
             <h1>Design Gallery</h1>
+            <!-- -------------------------day-art1-variability -->
             <div class="faq">
                 <button class="accordion">
-                    <h3>Project: Aquatic birds and ARG resistance </h3>
+                    <div class="accordion-titles">
+                        <h3>Project colaboration: maps, figures and charts design</h3>
+                        <h2>Variability of faecal microbiota and
+                            ARG in flocks of migratory gulls and comparison with the
+                            surrounding environment</h2>
+                        <h4>August, 2024</h4>
+                    </div>
                     <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
                 </button>
                 <div class="pannel">
-                    <img src="/design-section/graphical-abstract-art2.png" alt="graphical abstract 1">
-                    <a
-                        href=https://www.researchgate.net/publication/350564311_Faecal_microbiota_and_antibiotic_resistance_genes_in_migratory_waterbirds_with_contrasting_habitat_use">
-                        <p class="bib-source">Jarma, D. et al. (2024) <b>‘Variability of faecal microbiota and antibiotic resistance genes in flocks of migratory gulls and comparison with the surrounding environment’</b>, Environmental Pollution, 359, p. 124563. doi:10.1016/j.envpol.2024.124563.</p>
+                    <a href=https://www.researchgate.net/publication/350564311_Faecal_microbiota_and_antibiotic_resistance_genes_in_migratory_waterbirds_with_contrasting_habitat_use"
+                        target="_blank">
+                        <p class="bib-source">Jarma, D. et al. (2024) <b>‘Variability of faecal microbiota and
+                                antibiotic resistance genes in flocks of migratory gulls and comparison with the
+                                surrounding environment’</b>, Environmental Pollution, 359, p. 124563.
+                            doi:10.1016/j.envpol.2024.124563.</p>
                     </a>
+                    <img class="design-graph" src="design-section/day-art1-variability/graphical-abstract-art2.png"
+                        alt="graphical-abstract">
+                    <img class="design-graph" src="design-section\day-art1-variability/site-Doñana.png" alt="mapa">
+                    <img class="design-graph" src="design-section\day-art1-variability/site-fuenteDePiedra.png"
+                        alt="mapa">
+                    <img class="design-graph" src="design-section\day-art1-variability/site-odiel.png" alt="mapa">
+                    <img class="design-graph" src="design-section/day-art1-variability/fu-map.png" alt="map">
+                    <img class="design-graph"
+                        src="design-section\day-art1-variability/barplot-relative-abundance2-art2.png" alt="">
+                    <img class="design-graph" src="design-section/day-art1-variability/pca-habitat-art2.png" alt="map">
                 </div>
             </div>
+            <!-- -------------------------------------bal-art1 -->
             <div class="faq">
                 <button class="accordion">
-                    <h3>Project: Aquatic birds and ARG resistance 2 </h3>
+                    <div class="accordion-titles">
+                        <h3>Project co-author: research, maps, and figures design. </h3>
+                        <h2>Scaling up in community forest enterprises: the case of central Mexico.</h2>
+                        <h4>August,2024</h4>
+                    </div>
                     <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
                 </button>
                 <div class="pannel">
-                    <img src="/design-section/graphical-abstract.jpg" alt="graphical abstract 2">
+                    <a href="https://link.springer.com/article/10.1007/s42532-024-00192-y" target="_blank">
+                        <p class="bib-source">Solís-Mendoza, L.E., Sánchez-Nupan, L.O., Castro-Torres, R.B. et
+                            al. <b>Scaling up in community forest enterprises: the case of central Mexico.</b> Socio
+                            Ecol Pract Res 6, 347–366 (2024). https://doi.org/10.1007/s42532-024-00192-y</p>
+                    </a>
+                    <img class="design-graph" src="/design-section/bal-art2/map-artEliza.png" alt="ses frame">
+                </div>
+            </div>
+            <!-- ------------------------------day-art2-faeces -->
+            <div class="faq">
+                <button class="accordion">
+                    <div class="accordion-titles">
+                        <h3>Project colab: maps, figures and charts design</h3>
+                        <h2>Faecal
+                            microbiota and antibiotic resistance genes in migratory waterbirds with contrasting
+                            habitat use</h2>
+                        <h4>January, 2024</h4>
+                    </div>
+                    <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+                </button>
+                <div class="pannel">
                     <a href=https://www.researchgate.net/publication/382277977_Variability_of_faecal_microbiota_and_antibiotic_resistance_genes_in_flocks_of_migratory_gulls_and_comparison_with_the_surrounding_environment#fullTextFileContent"
                         target="_blank">
-                        <p class="bib-source">Jarma, Dayana & Sánchez, Marta & Green, Andy & Peralta-Sánchez, Juan & Hortas, Francisco & Sànchez-Melsió, Alexandre & Borrego, Carles. (2021). <b>Faecal microbiota and antibiotic resistance genes in migratory waterbirds with contrasting habitat use. Science of The Total Environment.</b> 783. 146872. 10.1016/j.scitotenv.2021.146872. </p>
+                        <p class="bib-source">Jarma, Dayana & Sánchez, Marta & Green, Andy & Peralta-Sánchez, Juan &
+                            Hortas, Francisco & Sànchez-Melsió, Alexandre & Borrego, Carles. (2021). <b>Faecal
+                                microbiota and antibiotic resistance genes in migratory waterbirds with contrasting
+                                habitat use. Science of The Total Environment.</b> 783. 146872.
+                            10.1016/j.scitotenv.2021.146872. </p>
                     </a>
+                    <img class="design-graph" src="design-section/day-art2-faecal/graphical-abstract.jpg"
+                        alt="graphical abstract">
+                    <img class="design-graph" src="design-section\day-art2-faecal/beta-diversity-art2.png" alt="">
+                    <img class="design-graph" src="design-section\day-art2-faecal/barplot-relative-abundance-art1.png"
+                        alt="">
+                    <img class="design-graph" src="design-section\day-art2-faecal/relative-abundance2-art2.png" alt="">
                 </div>
             </div>
+            <!-- --------------------------------bal-art2 -->
             <div class="faq">
-            <button class="accordion">
-                <h3>Paper: Forest communities and Socioecological Systems </h3>
-                <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
-            </button>
-            <div class="pannel">
-                <img src="/design-section/ses-frame.jpg" alt="ses frame">
-                <img src="/design-section/sfm-model.jpg" alt="sfm model">
-                <a href="https://link.springer.com/article/10.1007/s00267-021-01512-8" target="_blank">
-                    <p class="bib-source">de la Mora, G.D.l.M., Sánchez-Nupan, L.O., Castro-Torres, B. et al. <b >Sustainable Community Forest Management in Mexico: An Integrated Model of Three Socio-ecological Frameworks.</b> Environmental Management 68, 900–913 (2021). https://doi.org/10.1007/s00267-021-01512-8</p>
-                </a>
+                <button class="accordion">
+                    <div class="accordion-titles">
+                        <h3>My thesis: research, maps, and figures design. </h3>
+                        <h2>Sustainable Community Forest Management in Mexico</h2>
+                        <h4>September, 2021</h4>
+                    </div>
+                    <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+                </button>
+                <div class="pannel">
+                    <a href="https://link.springer.com/article/10.1007/s00267-021-01512-8" target="_blank">
+                        <p class="bib-source">de la Mora, G.D.l.M., Sánchez-Nupan, L.O., Castro-Torres, B. et
+                            al. <b>Sustainable Community Forest Management in Mexico: An Integrated Model of Three
+                                Socio-ecological Frameworks.</b> Environmental Management 68, 900–913 (2021).
+                            https://doi.org/10.1007/s00267-021-01512-8</p>
+                    </a>
+                    <img class="design-graph" src="/design-section/bal-art1/ses-frame.jpg" alt="ses frame">
+                    <img class="design-graph" src="/design-section/bal-art1/sfm-model.jpg" alt="sfm model">
+                </div>
             </div>
-        </div>
+
     </section>
     <script>
         var acc = document.getElementsByClassName('accordion');
