maps for proyecto cantera in design

--- a/views/data-portfolio.ejs
+++ b/views/data-portfolio.ejs
@@ -142,6 +142,35 @@
                     <img class="design-graph" src="/design-section/bal-art1/sfm-model.jpg" alt="sfm model">
                 </div>
             </div>
+                       <!-- ------------------------------javierTriana -->
+                       <div class="faq">
+                        <button class="accordion">
+                            <div class="accordion-titles">
+                                <h3>Cartography production in Environmental Impact Asessment</h3>
+                                <h2>Aprovechamiento de cantera de mármol en Córdoba, Veracruz</h2>
+                                <h4>Octubre, 2020</h4>
+                            </div>
+                            <i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+                        </button>
+                        <div class="pannel">
+                            <!-- <a href=https://www.researchgate.net/publication/382277977_Variability_of_faecal_microbiota_and_antibiotic_resistance_genes_in_flocks_of_migratory_gulls_and_comparison_with_the_surrounding_environment#fullTextFileContent"
+                                target="_blank">
+                                <p class="bib-source">Jarma, Dayana & Sánchez, Marta & Green, Andy & Peralta-Sánchez, Juan &
+                                    Hortas, Francisco & Sànchez-Melsió, Alexandre & Borrego, Carles. (2021). <b>Faecal
+                                        microbiota and antibiotic resistance genes in migratory waterbirds with contrasting
+                                        habitat use. Science of The Total Environment.</b> 783. 146872.
+                                    10.1016/j.scitotenv.2021.146872. </p>
+                            </a> -->
+                            <img class="design-graph" src="design-section/javierTriana/dimensiones.jpg"
+                                alt="MIA map">
+                            <img class="design-graph" src="design-section/javierTriana/Planimetria.jpg" alt="MIA map">
+                            <img class="design-graph" src="design-section/javierTriana/Hidro.jpg"
+                                alt="MIA map">
+                            <img class="design-graph" src="design-section/javierTriana/flora.jpg" alt="MIA map">
+                            <img class="design-graph" src="design-section/javierTriana/fauna.jpg" alt="MIA map">
+                            <img class="design-graph" src="design-section/javierTriana/reforestacion.jpg" alt="MIA map">
+                        </div>
+                    </div>
 
     </section>
     <script>
