--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,11 +25,11 @@
                 <div class="row">
                     <h1 class="sub-title">About Me</h1>
                     <div class="about-col-1">
-                        <img src="img/balam_nobackground.png" alt="">
+                        <img src="img/portada-balam.jpg" alt="">
                     </div>
-                    <div class="about-col-3">
-                        <img src="img/balam-evora.jpg" alt="">
-                    </div>
+                    <!-- <div class="about-col-3">
+                        <img src="img/portada-balam-full.jpg" alt="">
+                    </div> -->
                     <div class="about-col-2">
                         <p>Geeking out over maps and data since 2014, mainly focusing on sustainable resource management
                             and territorial planning. I'm a big fan of geospatial technologies, especially GIS and
