--- a/public/style.css
+++ b/public/style.css
@@ -290,6 +290,7 @@ main{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
+    padding-bottom: 2rem;
 }
 .work{
     margin:0 1rem 0 1rem;
