--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>🐆-Balam Castro</title>
+<head>}
     <%- include('./partials/head.ejs') %>
 </head>
 
