--- a/public/reset-style.css
+++ b/public/reset-style.css
@@ -48,4 +48,13 @@ table {
 	border-spacing: 0;
 }
 
+button {
+    appearance: none;
+    -webkit-appearance: none;
+    border: none;
+    background: none;
+    padding: 0;
+    margin: 0;
+    color: inherit;
+}
 
