--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@
     text-decoration: none;
 }
 body {
-    margin-top: 50px;
+    /* margin-top: 50px; */
     font-family:'Poppins', sans-serif;
     width: 100%;
     background-color: var(--black);
@@ -127,7 +127,8 @@ main{
     max-width: 100px;
 }
 .header-text{
-    margin: 1rem 0 0 1rem;
+    margin-left: 1rem;
+    padding-top: 2rem;
 }
 
 /* --------------------------------------about mobile */
